--- a/Introduction_to_Python.ipynb
+++ b/Introduction_to_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwUchPpWTM2GqydjlD7nUS",
+      "authorship_tag": "ABX9TyNGbk11jrTP2PCrbe93URWI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "\n",
         "**Introdução a Python**\n",
         "\n",
-        "**Aluno:** Gabriel Marcos Mendes\n",
+        "**Alunos:** Gabriel Marcos Mendes e Jessé Pereira\n",
         "\n",
         "**Professor:** Felipe Viel\n",
         "\n"
@@ -66,7 +66,7 @@
         "id": "skTyfqvmyXIb",
         "outputId": "3d870451-302e-4687-b05d-e50ccc00e6fc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -107,7 +107,7 @@
         "id": "Fs-oSaXvzEi8",
         "outputId": "08775177-ecc6-430f-cad7-6efba1e5391a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -152,7 +152,7 @@
         "id": "7qUOWsCizXNf",
         "outputId": "0e401adb-5e35-477b-8c0e-09b70c49c3a7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -196,7 +196,7 @@
         "id": "WKxm0O_k0GVy",
         "outputId": "b6252d62-f10d-4238-a9d9-5a47af654dc8"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
